# kitsune

./: CMakeLists.txt  Makefile  README.md  kitsune.cmake
example/: CMakeLists.txt
example/1-hello_world/: main.c
example/2-optional/: main.c
include/kitsune/core/: assert.h  bit.h  core.h  def.h  log.h  numbers.h  optional.h  res.h
include/kitsune/types/number/: float.h  integer.h
include/kitsune/types/string/: str_view.h  string.h
include/kitsune/utils/: bit.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/data/list/: CMakeLists.txt
src/types/: CMakeLists.txt
src/utils/: CMakeLists.txt
test/: CMakeLists.txt
test/data/list/: linked_list.c
